Responsive de Negocio y de Footer culminado

--- a/src/Style/Footer.css
+++ b/src/Style/Footer.css
@@ -1,5 +1,5 @@
-.asesoria {
-  width: 70%;
+.asesoria{
+  width: 600px;
 }
 
 .help {
@@ -15,7 +15,6 @@
 
 .help>h1>span {
   color: #FF8000;
-  font-family: Poppins;
   font-size: 45px;
   font-weight: 700;
 }
@@ -28,7 +27,6 @@
 
 .col>h1 {
   color: #343434;
-  font-family: Poppins;
   font-size: 16px;
   font-weight: 700;
   margin-bottom: 3%;
@@ -36,7 +34,6 @@
 
 .col>p {
   color: #343434;
-  font-family: Poppins;
   font-size: 15px;
   font-weight: 500;
 }
@@ -59,18 +56,234 @@
 
 .cont-banner>.footer-right>.texto-footer>h1 {
   color: #FF7F00;
-  font-family: Poppins;
   font-size: 28px;
   font-weight: 700;
 }
 
 .cont-banner>.footer-right>.texto-footer>p {
   color: #717171;
-  font-family: Poppins;
   font-size: 16px;
   font-weight: 400;
 }
 
-.footer-left>img{
+.footer-left>img {
   height: 90%;
+}
+
+.help-movil {
+  display: none;
+}
+
+.banner {
+  margin: 10% 3% 10% 3%;
+}
+
+.google-responsive {
+  display: none;
+}
+
+.asesores>.row>.col-md-6 {
+  flex-direction: column;
+}
+
+.wsp-asesores {
+  width: 148px;
+  height: 31px;
+  border: none;
+  color: #FFF;
+  border-radius: 0px 0px 8px 8px;
+  background: #55C455;
+  margin-top: -4px;
+  text-align: start;
+  font-size: 11px;
+}
+
+@media (max-width: 1024px) {
+  .banner {
+    height: 157px;
+    border-radius: 10px;
+  }
+
+  .footer-left>img {
+    height: 100%;
+    width: 75%;
+  }
+
+  .cont-banner>.footer-right>.texto-footer>h1 {
+    font-size: 18px;
+  }
+
+  .cont-banner>.footer-right>.texto-footer>p {
+    font-size: 13px;
+  }
+
+  .texto-footer>img {
+    width: 117px;
+    height: 34px;
+  }
+
+  .col>img {
+    width: 60%;
+  }
+
+  .col>h1 {
+    font-size: 11px;
+  }
+
+  .col>p {
+    font-size: 10px;
+  }
+
+  .help>h1 {
+    font-size: 25px;
+  }
+
+  .help>h1>span {
+    font-size: 25px;
+  }
+  .asesoria{
+    width: 300px;
+  }
+  .wsp-asesores {
+    margin-top: -23px;
+  }
+}
+
+@media(max-width:768px) {
+  .help>h1 {
+    font-size: 30px;
+  }
+
+  .help>h1>span {
+    font-size: 30px;
+  }
+
+  .help-img {
+    width: 90%;
+  }
+
+  .asesoria {
+    width: 250px;
+  }
+
+  .cont-banner>.footer-right>.texto-footer>h1 {
+    font-size: 15px;
+  }
+
+  .cont-banner>.footer-right>.texto-footer>p {
+    font-size: 10px;
+  }
+
+  .texto-footer>img {
+    width: 87px;
+    height: 26px;
+  }
+
+  .footer-left>img {
+    height: 92%;
+    width: 90%;
+  }
+
+  .banner {
+    height: 118px;
+    border-radius: 10px;
+  }
+
+}
+
+@media (max-width:390px) {
+  .help-img {
+    display: none;
+  }
+
+  .help-movil {
+    display: block;
+    width: 80%;
+  }
+
+  .asesores>.row {
+    width: 100%;
+  }
+
+  .banner {
+    height: 470px;
+    margin: 10% 3% 10% 3%;
+    flex-direction: column-reverse;
+  }
+
+  .texto-footer>img {
+    display: none;
+  }
+
+  .google-responsive {
+    display: block;
+    width: 136px;
+    height: 41px;
+  }
+
+  .cont-banner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cont-banner>.footer-left {
+    order: 2;
+    width: 100%;
+    height: 50%;
+  }
+
+  .footer-right {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cont-banner>.footer-right {
+    order: 1;
+    width: 100%;
+    height: 50%;
+  }
+
+  .cont-banner>.footer-right>.texto-footer>h1 {
+    font-size: 16px;
+  }
+
+  .cont-banner>.footer-right>.texto-footer>p {
+    font-size: 12px;
+    padding: 0% 20% 0% 20%;
+  }
+
+  .footer-left>img {
+    height: 100%;
+    width: 100%;
+  }
+
+  .logo-k>.logok {
+    width: 20%;
+  }
+
+  .logo-footer {
+    margin-bottom: 7%;
+  }
+
+  .footer>.row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .footer>.row>.col {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+
+  .footer>.row>.col>h1,
+  .footer>.row>.col>p {
+    text-align: center;
+  }
+
 }
